:sparkles: add rollback of a realisation and fix shift cards with buttons

--- a/src/assets/css/sections/realisations/_realisations-list.scss
+++ b/src/assets/css/sections/realisations/_realisations-list.scss
@@ -17,8 +17,7 @@
     cursor: grab;
     overflow: hidden;
 
-    &--passed,
-    &--smashed {
+    &--passed-smashed {
       opacity: 0;
       pointer-events: none;
     }
